我把parseInt（）改成了Number（），因为有4.5和3.5的商品，如果用前者的话，购物时候的零头就无法显示出来了

--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
                     <!--</table>-->
                 <!--</div>-->
             <!--</div>-->
-           <p class="text-right ">总计： <span class="text-right all-in-total" >0.00</span>.00元</p>
+           <p class="text-right ">总计： <span class="text-right all-in-total" >0.00</span>元</p>
             <p><a class="navbar-right btn btn-primary btn-toolbar "  role="button" id="go-to-pay-page" href="#">付款</a></p>
 
         </div>
