--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
                             </thead>
                         </table>
                     </div>
-                    <p class="text-right">总计：0.00元</p>
+                    <p class="text-right ">总计： <span class="text-right all-in-total" >0.00</span>元</p>
                     <p><a class="navbar-right btn btn-primary btn-toolbar "  role="button" href="./pay.html">确认</a></p>
                     <br>
                     <br>
@@ -233,11 +233,11 @@
         <!--<script src="scripts/Time.js"></script>-->
     <!---->
         <!--<script src='scripts/promotion.js'></script>-->
-        <!--<script src="scripts/page_jump.js"></script>-->
+        <script src="scripts/click.js"></script>
 
-        <!--<script src="scripts/product_list.js"></script>-->
-        <!--<script src="scripts/shopping_cart.js"></script>-->
-        <!--<script src="scripts/payment.js"></script>-->
+        <script src="scripts/list.js"></script>
+        <script src="scripts/cart.js"></script>
+        <script src="scripts/pay.js"></script>
 
         <script src="scripts/underscore.js"></script>
         <!-- endbuild -->
