when nothing remove & show list

--- a/app/index.html
+++ b/app/index.html
@@ -187,6 +187,7 @@
                         </table>
                     </div>
                     <p class="text-right ">总计： <span class="text-right all-in-total" >0.00</span>元</p>
+                    <p class="text-right ">节省： <span class="text-right saved" >0.00</span>元</p>
                     <p><a class="navbar-right btn btn-primary btn-toolbar "  role="button" href="./pay.html">确认</a></p>
                     <br>
                     <br>
