--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active" id="go-to-home-page"><a href="#">主页</a></li>
-                        <li><a href="#" class="show-list">商品列表</a></li>
+                        <li id="show-list" ><a href="#" class="show-list">商品列表</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
