--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@
                     </table>
 
                 </div>
-                <div class="list">
+                <div class="list"  id="pay-promotion">
                     <a class="list-group-item panel-heading disabled">
                        赠送商品
                     </a>
